fixed layout issue for mobile

--- a/public/fbp_mobile.css
+++ b/public/fbp_mobile.css
@@ -3,7 +3,7 @@
 	    	width:100px;
 	   }
 		
-	  .logo {width: 200px;
+	  .logo {width: 100px;
 					  margin-left:0px; margin-right:10px;
 					  margin-top:0px; margin-bottom:0px;
 	  }
@@ -80,7 +80,7 @@
 /*		    margin:5px; */
 			display: grid;
 		    grid-template-columns: 1fr 1fr 1fr ;	
-		    grid-template-rows: 0.8fr 0.5fr 0.8fr;
+		    grid-template-rows: 0.8fr 0.5fr 0.5fr;
 		    align-items:center;
 		    background: #aafce3; 
 		    color:green;
